# gitr

crates/git-ref/: Cargo.toml
crates/git-ref/src/files/: loose.rs
